--- a/TexturePackHub/artists/index.html
+++ b/TexturePackHub/artists/index.html
@@ -11,7 +11,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="">Texture Pack Hub</a>
+                <a class="navbar-brand" href="../">Texture Pack Hub</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -24,23 +24,23 @@
                             <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Texture Packs</button>
                             <ul class="dropdown-menu dropdown-menu-dark">
                                 <li>
-                                    <a class="dropdown-item" href="18">1.8</a>
+                                    <a class="dropdown-item" href="../18">1.8</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="116">1.16</a>
+                                    <a class="dropdown-item" href="../116">1.16</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="119">1.19</a>
+                                    <a class="dropdown-item" href="../119">1.19</a>
                                 </li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pricing">Pricing
+                            <a class="nav-link" href="../pricing">Pricing</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="../artists">Artists
                                 <span class="visually-hidden">(current)</span>
                             </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="artists">Artists</a>
                         </li>
                     </ul>
                 </div>
