--- a/TexturePackHub/18/index.html
+++ b/TexturePackHub/18/index.html
@@ -24,7 +24,7 @@
                             <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Texture Packs</button>
                             <ul class="dropdown-menu dropdown-menu-dark">
                                 <li>
-                                    <a class="dropdown-item" href="../18">1.8</a>
+                                    <a class="dropdown-item" href="">1.8</a>
                                 </li>
                                 <li>
                                     <a class="dropdown-item" href="../116">1.16</a>
@@ -38,35 +38,12 @@
                             <a class="nav-link" href="../pricing">Pricing</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="">Artists
-                                <span class="visually-hidden">(current)</span>
-                            </a>
+                            <a class="nav-link" href="../artists">Artists</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-
-        <div>
-            <div class="centered-title">
-                <h1>
-                    Artists of Texture Pack Hub!
-                </h1>
-            </div>
-
-            <div class="main-div">
-                <h3>
-                    sakuradev
-                </h3>
-                <h5>
-                    sakuradev, also known by PandaCatPlayz, is the founder and web designer of Texture Pack Hub! sakuradev has made 5 public packs!
-                </h5>
-                <h6>
-                    IGN: PandaCatPlayz. Discord: sakuradev#0940.
-                </h6>
-                <img class="banner" src="../assets/images/banners/sakuradev.jpg" alt="sakuradev">
-            </div>
-        </div>
     </body>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </html>
