ads and new icon hopefully

--- a/TexturePackHub/18/index.html
+++ b/TexturePackHub/18/index.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../assets/css/main.css">
-        <link rel="icon" type="image/x-icon" href="../images/paintbrush.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="../images/paintbrush.ico">
+        <script data-cfasync="false" src="//d3b4u8mwtkp9dd.cloudfront.net/?wmubd=980085"></script>
     </head>
 
     <body>
@@ -44,6 +45,21 @@
                 </div>
             </div>
         </nav>
+        
+        <div class="centered-title">
+            <h1>
+                1.8 Texture Packs!
+            </h1>
+        </div>
+
+        <div class="main-div">
+            <h3>
+                A Majority of these are built for PvP but can be used for all aspects of Minecraft!
+            </h3>
+            <h2>
+                Sakura PvP
+            </h2>
+        </div>
     </body>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </html>
