--- a/TexturePackHub/artists/index.html
+++ b/TexturePackHub/artists/index.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../assets/css/main.css">
-        <link rel="icon" type="image/x-icon" href="../images/paintbrush.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="../images/paintbrush.ico">
+        <script data-cfasync="false" src="//d3b4u8mwtkp9dd.cloudfront.net/?wmubd=980085"></script>
     </head>
 
     <body>
