attempting to fix favicon
github pages is great... sometimes

--- a/TexturePackHub/18/index.html
+++ b/TexturePackHub/18/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-        <title>TexturePackHub | Artists</title>
+        <title>TexturePackHub | 1.8 Packs</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../assets/css/main.css">
-        <link rel="shortcut icon" type="image/x-icon" href="../images/paintbrush.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="../images/paintbrush.ico?">
         <script data-cfasync="false" src="//d3b4u8mwtkp9dd.cloudfront.net/?wmubd=980085"></script>
     </head>
 
@@ -56,9 +56,9 @@
             <h3>
                 A Majority of these are built for PvP but can be used for all aspects of Minecraft!
             </h3>
-            <h2>
+            <h4>
                 Sakura PvP
-            </h2>
+            </h4>
         </div>
     </body>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
