--- a/TexturePackHub/18/index.html
+++ b/TexturePackHub/18/index.html
@@ -58,6 +58,11 @@
             </h3>
             <h4>
                 Sakura PvP
+                <span class="badge rounded-pill bg-danger">PvP</span>
+                <span class="badge rounded-pill bg-secondary">GUI</span>
+                <span class="badge rounded-pill bg-primary">Particles</span>
+                <span class="badge rounded-pill bg-success">Blocks</span>
+                <span class="badge rounded-pill bg-light">Armor</span>
             </h4>
         </div>
     </body>
