--- a/TexturePackHub/18/index.html
+++ b/TexturePackHub/18/index.html
@@ -64,7 +64,43 @@
                 <span class="badge rounded-pill bg-success">Blocks</span>
                 <span class="badge rounded-pill bg-light">Armor</span>
             </h4>
-            <a class="btn btn-secondary" role="button" href="assets/packs/test.zip" download="SakuraPvP.zip"></a>
+            <a class="btn btn-secondary" role="button" href="assets/packs/18/SakuraPvP.zip" download="SakuraPvP.zip"></a>
+            <h4>
+                Sunset PvP Version 9
+                <span class="badge rounded-pill bg-danger">PvP</span>
+                <span class="badge rounded-pill bg-secondary">GUI</span>
+                <span class="badge rounded-pill bg-primary">Particles</span>
+                <span class="badge rounded-pill bg-success">Blocks</span>
+                <span class="badge rounded-pill bg-light">Armor</span>
+            </h4>
+            <a class="btn btn-secondary" role="button" href="assets/packs/18/SunsetPvP_v9.zip" download="SunsetPvP_v9.zip"></a>
+            <h4>
+                Minty PvP
+                <span class="badge rounded-pill bg-danger">PvP</span>
+                <span class="badge rounded-pill bg-secondary">GUI</span>
+                <span class="badge rounded-pill bg-primary">Particles</span>
+                <span class="badge rounded-pill bg-success">Blocks</span>
+                <span class="badge rounded-pill bg-light">Armor</span>
+            </h4>
+            <a class="btn btn-secondary" role="button" href="assets/packs/18/MintyPvP.zip" download="MintyPvP.zip"></a>
+            <h4>
+                BubbleGum PvP
+                <span class="badge rounded-pill bg-danger">PvP</span>
+                <span class="badge rounded-pill bg-secondary">GUI</span>
+                <span class="badge rounded-pill bg-primary">Particles</span>
+                <span class="badge rounded-pill bg-success">Blocks</span>
+                <span class="badge rounded-pill bg-light">Armor</span>
+            </h4>
+            <a class="btn btn-secondary" role="button" href="assets/packs/18/BubbleGumPvP.zip" download="BubbleGumPvP.zip"></a>
+            <h4>
+                Purple PvP
+                <span class="badge rounded-pill bg-danger">PvP</span>
+                <span class="badge rounded-pill bg-secondary">GUI</span>
+                <span class="badge rounded-pill bg-primary">Particles</span>
+                <span class="badge rounded-pill bg-success">Blocks</span>
+                <span class="badge rounded-pill bg-light">Armor</span>
+            </h4>
+            <a class="btn btn-secondary" role="button" href="assets/packs/18/PurplePvP.zip" download="PurplePvP.zip"></a>
         </div>
     </body>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
