--- a/TexturePackHub/18/index.html
+++ b/TexturePackHub/18/index.html
@@ -67,6 +67,21 @@
                 <span class="pack-tag badge rounded-pill bg-success">Blocks</span>
                 <span class="pack-tag badge rounded-pill bg-light">Armor</span>
             </h4>
+            <h6>
+                By: PandaCatPlayz
+            </h6>
+            <a class="download-btn btn btn-secondary" role="button" href="assets/packs/18/SakuraPvP.zip" download="SakuraPvP.zip">Download!</a>
+            <h4>
+                Sakura Bridge Overlay
+                <span class="pack-tag badge rounded-pill bg-danger">PvP</span>
+                <span class="pack-tag badge rounded-pill bg-secondary">GUI</span>
+                <span class="pack-tag badge rounded-pill bg-primary">Particles</span>
+                <span class="pack-tag badge rounded-pill bg-success">Blocks</span>
+                <span class="pack-tag badge rounded-pill bg-light">Armor</span>
+            </h4>
+            <h6>
+                By: PandaCatPlayz
+            </h6>
             <a class="download-btn btn btn-secondary" role="button" href="assets/packs/18/SakuraPvP.zip" download="SakuraPvP.zip">Download!</a>
             <h4>
                 Sunset PvP Version 9
@@ -76,6 +91,9 @@
                 <span class="pack-tag badge rounded-pill bg-success">Blocks</span>
                 <span class="pack-tag badge rounded-pill bg-light">Armor</span>
             </h4>
+            <h6>
+                By: PandaCatPlayz
+            </h6>
             <a class="download-btn btn btn-secondary" role="button" href="assets/packs/18/SunsetPvP_v9.zip" download="SunsetPvP_v9.zip">Download!</a>
             <h4>
                 Minty PvP
@@ -85,6 +103,9 @@
                 <span class="pack-tag badge rounded-pill bg-success">Blocks</span>
                 <span class="pack-tag badge rounded-pill bg-light">Armor</span>
             </h4>
+            <h6>
+                By: PandaCatPlayz
+            </h6>
             <a class="download-btn btn btn-secondary" role="button" href="assets/packs/18/MintyPvP.zip" download="MintyPvP.zip">Download!</a>
             <h4>
                 BubbleGum PvP
@@ -94,6 +115,9 @@
                 <span class="pack-tag badge rounded-pill bg-success">Blocks</span>
                 <span class="pack-tag badge rounded-pill bg-light">Armor</span>
             </h4>
+            <h6>
+                By: PandaCatPlayz
+            </h6>
             <a class="download-btn btn btn-secondary" role="button" href="assets/packs/18/BubbleGumPvP.zip" download="BubbleGumPvP.zip">Download!</a>
             <h4>
                 Purple PvP
@@ -103,6 +127,9 @@
                 <span class="pack-tag badge rounded-pill bg-success">Blocks</span>
                 <span class="pack-tag badge rounded-pill bg-light">Armor</span>
             </h4>
+            <h6>
+                By: PandaCatPlayz
+            </h6>
             <a class="download-btn btn btn-secondary" role="button" href="assets/packs/18/PurplePvP.zip" download="PurplePvP.zip">Download!</a>
         </div>
     </body>
