added image and proper file pathing

--- a/TexturePackHub/18/index.html
+++ b/TexturePackHub/18/index.html
@@ -70,7 +70,8 @@
             <h6>
                 By: PandaCatPlayz
             </h6>
-            <a class="download-btn btn btn-secondary" role="button" href="assets/packs/18/SakuraPvP.zip" download="SakuraPvP.zip">Download!</a>
+            <img class="pack" src="../assets/packs/18/SakuraPvP.png">
+            <a class="download-btn btn btn-secondary" role="button" href="../assets/packs/18/SakuraPvP.zip" download="SakuraPvP.zip">Download!</a>
             <h4>
                 Sakura Bridge Overlay
                 <span class="pack-tag badge rounded-pill bg-danger">PvP</span>
@@ -82,7 +83,7 @@
             <h6>
                 By: PandaCatPlayz
             </h6>
-            <a class="download-btn btn btn-secondary" role="button" href="assets/packs/18/SakuraBridgeOverlay.zip" download="SakuraBridgeOverlay.zip">Download!</a>
+            <a class="download-btn btn btn-secondary" role="button" href="../assets/packs/18/SakuraBridgeOverlay.zip" download="SakuraBridgeOverlay.zip">Download!</a>
             <h4>
                 Sunset PvP Version 9
                 <span class="pack-tag badge rounded-pill bg-danger">PvP</span>
@@ -94,7 +95,7 @@
             <h6>
                 By: PandaCatPlayz
             </h6>
-            <a class="download-btn btn btn-secondary" role="button" href="assets/packs/18/SunsetPvP_v9.zip" download="SunsetPvP_v9.zip">Download!</a>
+            <a class="download-btn btn btn-secondary" role="button" href="../assets/packs/18/SunsetPvP_v9.zip" download="SunsetPvP_v9.zip">Download!</a>
             <h4>
                 Minty PvP
                 <span class="pack-tag badge rounded-pill bg-danger">PvP</span>
@@ -106,7 +107,7 @@
             <h6>
                 By: PandaCatPlayz
             </h6>
-            <a class="download-btn btn btn-secondary" role="button" href="assets/packs/18/MintyPvP.zip" download="MintyPvP.zip">Download!</a>
+            <a class="download-btn btn btn-secondary" role="button" href="../assets/packs/18/MintyPvP.zip" download="MintyPvP.zip">Download!</a>
             <h4>
                 BubbleGum PvP
                 <span class="pack-tag badge rounded-pill bg-danger">PvP</span>
@@ -118,7 +119,7 @@
             <h6>
                 By: PandaCatPlayz
             </h6>
-            <a class="download-btn btn btn-secondary" role="button" href="assets/packs/18/BubbleGumPvP.zip" download="BubbleGumPvP.zip">Download!</a>
+            <a class="download-btn btn btn-secondary" role="button" href="../assets/packs/18/BubbleGumPvP.zip" download="BubbleGumPvP.zip">Download!</a>
             <h4>
                 Purple PvP
                 <span class="pack-tag badge rounded-pill bg-danger">PvP</span>
@@ -130,7 +131,7 @@
             <h6>
                 By: PandaCatPlayz
             </h6>
-            <a class="download-btn btn btn-secondary" role="button" href="assets/packs/18/PurplePvP.zip" download="PurplePvP.zip">Download!</a>
+            <a class="download-btn btn btn-secondary" role="button" href="../assets/packs/18/PurplePvP.zip" download="PurplePvP.zip">Download!</a>
         </div>
     </body>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
