--- a/TexturePackHub/18/index.html
+++ b/TexturePackHub/18/index.html
@@ -83,6 +83,7 @@
             <h6>
                 By: PandaCatPlayz
             </h6>
+            <img class="pack" src="../assets/packs/18/SakuraBridgeOverlay.png">
             <a class="download-btn btn btn-secondary" role="button" href="../assets/packs/18/SakuraBridgeOverlay.zip" download="SakuraBridgeOverlay.zip">Download!</a>
             <h4>
                 Sunset PvP Version 9
@@ -95,6 +96,7 @@
             <h6>
                 By: PandaCatPlayz
             </h6>
+            <img class="pack" src="../assets/packs/18/SunsetPvP_v9.png">
             <a class="download-btn btn btn-secondary" role="button" href="../assets/packs/18/SunsetPvP_v9.zip" download="SunsetPvP_v9.zip">Download!</a>
             <h4>
                 Minty PvP
@@ -107,6 +109,7 @@
             <h6>
                 By: PandaCatPlayz
             </h6>
+            <img class="pack" src="../assets/packs/18/MintyPvP.png">
             <a class="download-btn btn btn-secondary" role="button" href="../assets/packs/18/MintyPvP.zip" download="MintyPvP.zip">Download!</a>
             <h4>
                 BubbleGum PvP
@@ -119,6 +122,7 @@
             <h6>
                 By: PandaCatPlayz
             </h6>
+            <img class="pack" src="../assets/packs/18/BubbleGumPvP.png">
             <a class="download-btn btn btn-secondary" role="button" href="../assets/packs/18/BubbleGumPvP.zip" download="BubbleGumPvP.zip">Download!</a>
             <h4>
                 Purple PvP
@@ -131,6 +135,7 @@
             <h6>
                 By: PandaCatPlayz
             </h6>
+            <img class="pack" src="../assets/packs/18/PurplePvP.png">
             <a class="download-btn btn btn-secondary" role="button" href="../assets/packs/18/PurplePvP.zip" download="PurplePvP.zip">Download!</a>
         </div>
     </body>
