--- a/TexturePackHub/18/index.html
+++ b/TexturePackHub/18/index.html
@@ -25,7 +25,7 @@
                             <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Texture Packs</button>
                             <ul class="dropdown-menu dropdown-menu-dark">
                                 <li>
-                                    <a class="dropdown-item" href="">1.8</a>
+                                    <a class="dropdown-item" href="../18">1.8</a>
                                 </li>
                                 <li>
                                     <a class="dropdown-item" href="../116">1.16</a>
