--- a/TexturePackHub/18/index.html
+++ b/TexturePackHub/18/index.html
@@ -139,5 +139,5 @@
             <a class="download-btn btn btn-secondary" role="button" href="../assets/packs/18/PurplePvP.zip" download="PurplePvP.zip">Download!</a>
         </div>
     </body>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/bootstrap.bundle.min.js"></script>
 </html>
