--- a/TexturePackHub/artists/index.html
+++ b/TexturePackHub/artists/index.html
@@ -69,5 +69,5 @@
             </div>
         </div>
     </body>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/bootstrap.bundle.min.js"></script>
 </html>
