--- a/TexturePackHub/pricing/index.html
+++ b/TexturePackHub/pricing/index.html
@@ -1,18 +1,18 @@
 <html>
     <head>
-        <title>TexturePackHub | Artists</title>
+        <title>TexturePackHub | Home</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../assets/css/main.css">
-        <link rel="shortcut icon" type="image/x-icon" href="../images/paintbrush.ico?">
+        <link rel="stylesheet" href="https://pandacatplayz.github.io/TexturePackHub/assets/css/main.css">
+        <link rel="shortcut icon" type="image/x-icon" href="images/paintbrush.ico?">
         <script data-cfasync="false" src="//d3b4u8mwtkp9dd.cloudfront.net/?wmubd=980085"></script>
     </head>
 
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../">Texture Pack Hub</a>
+                <a class="navbar-brand" href="">Texture Pack Hub</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -36,37 +36,43 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pricing">Pricing</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link active" href="">Artists
+                            <a class="nav-link active" href="../pricing">Pricing
                                 <span class="visually-hidden">(current)</span>
                             </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../artists">Artists</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
+        <div class="centered-title">
+            <h1>
+                Pricing
+            </h1>
+            <h3>
+                Commission a custom pack from your favorite artist!
+            </h3>
+        </div>
+        <div class="main-div">
+            <form>
+                <fieldset>
+                    <legend>Pack Form:</legend>
+                    <div class="form-group">
+                        <!-- METHOD OF CONTACT -->
+                        <!-- USERNAME ON METHOD OF CONTACT -->
+                        <!-- SELECT ARTIST -->
+                        <label class="form-label mt-4">Select Artist</label>
+                        <select class="form-select" id="artistSelect">
+                            <option>sakuradev</option>
+                        </select>
 
-        <div>
-            <div class="centered-title">
-                <h1>
-                    Artists of Texture Pack Hub!
-                </h1>
-            </div>
-
-            <div class="main-div">
-                <h3>
-                    sakuradev
-                </h3>
-                <h5>
-                    sakuradev, also known by PandaCatPlayz, is the founder and web designer of Texture Pack Hub! sakuradev has made 5 public packs!
-                </h5>
-                <h6>
-                    IGN: PandaCatPlayz. Discord: sakuradev#0940.
-                </h6>
-                <img class="banner" src="../assets/images/banners/sakuradev.jpg" alt="sakuradev">
-            </div>
+                        <!-- SELECT VERSION -->
+                        <!-- SELECT TYPE OF TEXTURES -->
+                    </div>
+                </fieldset>
+            </form>
         </div>
     </body>
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
