--- a/TexturePackHub/pricing/index.html
+++ b/TexturePackHub/pricing/index.html
@@ -65,6 +65,7 @@
                         <!-- SELECT ARTIST -->
                         <label class="form-label mt-4">Select Artist</label>
                         <select class="form-select" id="artistSelect">
+                            <option>Select one</option>
                             <option>sakuradev</option>
                         </select>
 
