--- a/TexturePackHub/pricing/index.html
+++ b/TexturePackHub/pricing/index.html
@@ -73,7 +73,9 @@
                         <label class="form-label mt-4">Email / Username / Number</label>
                         <input class="form-control" id="inputUsername" aria-describedby="username" placeholder="Enter here...">
                         <small class="form-text text-muted">We'll never share your information with anyone else.</small>
-
+                        <pre>
+                            
+                        </pre>
                         <!-- SELECT ARTIST -->
                         <label class="form-label mt-4">Select Artist</label>
                         <select class="form-select" id="artistSelect">
