--- a/TexturePackHub/pricing/index.html
+++ b/TexturePackHub/pricing/index.html
@@ -72,7 +72,6 @@
                         <!-- USERNAME ON METHOD OF CONTACT -->
                         <label class="form-label mt-4">Email / Username / Number</label>
                         <input class="form-control" id="inputUsername" aria-describedby="username" placeholder="Enter here...">
-                        
                         <!-- SELECT ARTIST -->
                         <label class="form-label mt-4">Select Artist</label>
                         <select class="form-select" id="artistSelect">
@@ -88,12 +87,22 @@
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="blocksCheck">
                             <label class="form-check-label" for="flexCheckDefault">Blocks</label>
+                        </div>
+                        <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="itemsCheck">
                             <label class="form-check-label" for="flexCheckDefault">Items</label>
+                        </div>
+                        <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="particlesCheck">
                             <label class="form-check-label" for="flexCheckDefault">Particles</label>
-                            <input class="form-check-input" type="checkbox" value="" id="armorCheck">
-                            <label class="form-check-label" for="flexCheckDefault">Armor</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="GUICheck">
+                            <label class="form-check-label" for="flexCheckDefault">GUI</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="animatedCheck">
+                            <label class="form-check-label" for="flexCheckDefault">Animated</label>
                         </div>
                     </div>
                 </fieldset>
