--- a/TexturePackHub/pricing/index.html
+++ b/TexturePackHub/pricing/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://pandacatplayz.github.io/TexturePackHub/assets/css/main.css">
         <link rel="shortcut icon" type="image/x-icon" href="images/paintbrush.ico?">
         <script data-cfasync="false" src="//d3b4u8mwtkp9dd.cloudfront.net/?wmubd=980085"></script>
+        <script src="../assets/js/packForm.js"></script>
     </head>
 
     <body>
@@ -136,8 +137,9 @@
                 <pre>
 
                 </pre>
-                <button type="submit" class="btn btn-primary" id="submit">Submit</button>
+                <button type="submit" class="btn btn-primary" id="submit" onclick="calculateCost()">Submit</button>
             </form>
+            <p id="formComplete"></p>
         </div>
     </body>
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
