doesnt really wokr still but lets go bby

--- a/TexturePackHub/pricing/index.html
+++ b/TexturePackHub/pricing/index.html
@@ -7,7 +7,6 @@
         <link rel="stylesheet" href="https://pandacatplayz.github.io/TexturePackHub/assets/css/main.css">
         <link rel="shortcut icon" type="image/x-icon" href="images/paintbrush.ico?">
         <script data-cfasync="false" src="//d3b4u8mwtkp9dd.cloudfront.net/?wmubd=980085"></script>
-        <script src="../assets/js/packForm.js"></script>
     </head>
 
     <body>
@@ -57,6 +56,7 @@
             </h3>
         </div>
         <div class="main-div">
+            <script src="../assets/js/packForm.js"></script>
             <form>
                 <fieldset>
                     <legend>Pack Form:</legend>
@@ -137,7 +137,7 @@
                 <pre>
 
                 </pre>
-                <button type="submit" class="btn btn-primary" id="submit" onclick="calculateCost()">Submit</button>
+                <button type="button" class="btn btn-primary" id="submit" onclick="calculateCost()">Submit</button>
             </form>
             <p id="formComplete"></p>
         </div>
