--- a/TexturePackHub/pricing/index.html
+++ b/TexturePackHub/pricing/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://pandacatplayz.github.io/TexturePackHub/assets/css/main.css">
-        <link rel="shortcut icon" type="image/x-icon" href="../assets/images/favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="../assets/images/favicon.ico?">
         <script data-cfasync="false" src="//d3b4u8mwtkp9dd.cloudfront.net/?wmubd=980085"></script>
     </head>
 
